Upgrade Java version and update to version 5.0.0
Updated project to use Java 21 (JDK and Maven configuration). Bumped version in pom.xml to 5.0.0. Replaced thread executor with virtual threads for improved performance.
Note: Requires Java 21. If you want to use older versions of Java, please use 4.x versions.